--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,6 @@
 		<build />
 		<appPath />
 		<aspectj.version>1.7.4</aspectj.version>
-		<allure.version>1.4.5</allure.version>
 	</properties>
 
 	<dependencies>
@@ -94,7 +93,7 @@
 		<dependency>
 			<groupId>ru.yandex.qatools.allure</groupId>
 			<artifactId>allure-testng-adaptor</artifactId>
-			<version>${allure.version}</version>
+			<version>1.5.0.RC2</version>
 		</dependency>
 		<dependency>
 			<groupId>ru.yandex.qatools.htmlelements</groupId>
@@ -204,7 +203,7 @@
 			<plugin>
 				<groupId>ru.yandex.qatools.allure</groupId>
 				<artifactId>allure-maven-plugin</artifactId>
-				<version>2.0</version>
+				<version>2.5</version>
 			</plugin>
 		</plugins>
 	</reporting>
